MDEV-38359 Assertion `!thd->free_list' failed in bool MYSQL_QUERY_LOG::write(THD *, time_t, const char *, size_t, ulonglong, ulonglong, bool, const char *, size_t)

The patch for "MDEV-33830 Support for cursors on prepared statements" tried
to enable slow log for cursor OPEN statements. However it introduced
a crash reported in MDEV-38359.

After checking the slog log implementation for sp_instr_stmt, it appeared to be buggy:
- MDEV-38611 Procedure statements do not write Explain entries to the slow log
- MDEV-38614 Procedure statements write wrong Query_time into slow log

It was decided to wait untile these bugs are cloded and enable slow log for OPEN
under terms of a separate task:
MDEV-38612 Cursor OPEN statements do not write to the slow log

This patch reverts the change which enabled slow log for OPEN.